# BankingStageErrorsTrackingSidecar

./: .dockerignore  Cargo.toml  DBA.md  Dockerfile  README.md  alts.txt  fly-hetzner-migration.toml  fly.toml  init-database.sql  migration.sql  run-service-and-cleanup.sh
.github/workflows/: deploy-fly.yml  rust_check.yml
src/: alt_store.rs  atl_store.rs  block_info.rs  cli.rs  lib.rs  main.rs  postgres.rs  prometheus_sync.rs  transaction_info.rs
